resized photos to webp

--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
     <h1>Customer Favorites</h1>
     <div class="row">
         <div class="column small-12 medium-6 large-3">
-            <img src="images/cupcakes.png" alt="gen 1 car" width="1200" height="500">
+            <img src="images/cupcakes.webp" alt="gen 1 car" width="1200" height="500">
             <p>Cupcakes are small, individual-sized cakes that are typically baked in muffin tins or cupcake pans. They are a popular dessert or snack item enjoyed by people of all ages. </p>
         </div> <!--end column-->
 
         <div class="column small-12 medium-6 large-3">
-            <img src="images/cake.png" alt="gen 2 car" width="1200" height="500">
+            <img src="images/cake.webp" alt="gen 2 car" width="1200" height="500">
             <p>Cakes are a staple dessert enjoyed worldwide, with a rich history dating back centuries. They are also a popular dessert or snack item enjoyed by people of all ages.</p>
         </div> <!--end column-->
 
         <div class="column small-12 medium-6 large-3">
-            <img src="images/macarons.png" alt="gen 3 car" width="1200" height="500">
+            <img src="images/macarons.webp" alt="gen 3 car" width="1200" height="500">
             <p>Macarons are delightful and delicate French confections that have gained popularity worldwide. Macarons are believed to have originated in Italy during the Renaissance period.</p>
         </div> <!--end column-->
 
         <div class="column small-12 medium-6 large-3">
-            <img src="images/candy.png" alt="gen 4 car" width="1200" height="500">
+            <img src="images/candy.webp" alt="gen 4 car" width="1200" height="500">
             <p>Candy, also known as sweets or confectionery, refers to a wide range of sugary treats enjoyed by people of all ages.</p>
         </div> <!--end column-->
 
@@ -82,7 +82,7 @@
 
 <div class="row left">
     <div class="column center small-4 medium-2 large-1">
-        <img src="images/cupcake-icon.png" alt="gen 4 car" width="800" height="450">
+        <img src="images/cupcake-icon.webp" alt="gen 4 car" width="800" height="450">
     </div> <!--end column-->
 
     <div class="column small-8 medium-4 large-3">
@@ -90,7 +90,7 @@
     </div> <!--end column-->
 
     <div class="column center small-4 medium-2 large-1">
-        <img src="images/cake-icon.png" alt="gen 4 car" width="400" height="225">
+        <img src="images/cake-icon.webp" alt="gen 4 car" width="400" height="225">
     </div> <!--end column-->
 
     <div class="column small-8 medium-4 large-3">
@@ -98,7 +98,7 @@
     </div> <!--end column-->
 
     <div class="column center small-4 medium-2 large-1">
-        <img src="images/macarons-icon.png" alt="gen 4 car" width="400" height="225">
+        <img src="images/macarons-icon.webp" alt="gen 4 car" width="400" height="225">
     </div> <!--end column-->
 
     <div class="column small-8 medium-4 large-3">
